objects/Issues__c.object
<CustomObject>
    <description>Object created to manage SMS2 Issues related to Case.</description>
    <fields>
        <fullName>Case_Number__c</fullName>
        <formula>Case__r.CaseNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Issues2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cause__c</fullName>
        <label>Cause</label>
        <picklist>
            <controllingField>Problem__c</controllingField>
            <picklistValues>
                <fullName>3rd Party Module Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abnormal LED light (Damaged WattNode)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AC Breaker Faulty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AC Breaker Settings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AC Contactor Faulty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AC Disconnect Faulty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AC Line blown fuse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AC Lineside Box Faulty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adhesive Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR Glass Appearance Different</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR Glass Delamination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR Glass Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bad Anodization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bad Communication Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bad Data Cable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Battery leak</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Breaker Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Built over ridge in roof</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burnt Diode</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cameras Faulty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capacitor Blown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cbox Faulty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCU (mobo/logic brd) Faulty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cell Damaged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>clock fault</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clogged drains</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cold Galvanization bad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comm Board Jumper Settings Are Incorrect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comm card faulty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communication Wiring Error</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_Opened__c</fullName>
        <formula>Case__r.Case_CreatedDate_Text__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Opened</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_State__c</fullName>
        <label>Error State</label>
        <picklist>
            <controllingField>Problem__c</controllingField>
            <picklistValues>
                <fullName>10 Temperature too high inside</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29 Error GFDI / Groundfault - Check Fuse!</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30 Error Measurement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>32 Error Selftest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>33 Error DC-gridfeeding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>34 Error Communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>35 Protection shutdown (SW)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>36 Protection shutdown (HW)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>38 Failure PV-Overvoltage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>41 Line failure Undervoltage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>42 Line failure Overvoltage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>48 Line failure Underfrequency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>49 Line failure Overfrequency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50 Line failure average value voltage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51 Line failure overvoltage L1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>52 Line failure undervoltage L1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>53 Line failure overvoltage L2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>54 Line failure undervoltage L2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>55 Error DC link</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>57 Waiting for reactivation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>58 Overtemperature controlling unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>59 Error self test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACVtgRPro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bfr-Srr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blown AC Fuse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burned Part / Terminals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Damage / Malfunction DC switch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Derating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>dZac-Bfr / dZac-Srr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EarthCurMax-S / EarthCurMax-B</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Installation_Date__c</fullName>
        <formula>(Case__r.Installation_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Installation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <picklist>
            <picklistValues>
                <fullName>ACPV - Microinverter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACPV - Module</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOSc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOSe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOSm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cells</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G&amp;A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>inverter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Module</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>monitoring</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Operating_Unit__c</fullName>
        <formula>Text(Case__r.Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Operating Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Cause__c</fullName>
        <label>if other:</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Problem__c</fullName>
        <label>if other:</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Problem_part__c</fullName>
        <label>if other:</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Product_Sub_Category__c</fullName>
        <label>if other:</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Resolution__c</fullName>
        <label>if other:</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PE_Action__c</fullName>
        <formula>text(Case__r.PE_Action__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PE Action</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part__c</fullName>
        <label>Part#</label>
        <picklist>
            <controllingField>b_Product_Sub_Category__c</controllingField>
            <picklistValues>
                <fullName>2 module frame kit (corrugated)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 module frame kit (tile)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 module frame kit (corrugated)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 module frame kit (tile)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AC Box</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ace Clamp, Primary Block, 3/8&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AC side disconnect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adapter DACOMEX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adapter MSI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assy, Anchor clip, Conduit exit, T5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assy, Connector, Female, T5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>assy, connector, male, T5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>assy, corner, curb, mitered, inside</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>assy, corner, curb, mitered, outside</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>assy, module, T5, 305L-WHT-D C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Axial fan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>batteries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beam, Extruded Aluminum, Mill Finish, 144&quot; Long</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beam, Extruded Aluminum, Mill Finish, 192&quot; Long</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>bracket, support, lg curb, 2-1/2&quot; spacer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Branch Circuit End Cap, ACPV, Plug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Branch Circuit End Cap, ACPV, Receptacle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cable Management Clip, ACPV, 301 Ss, 0 Degrees, 12 Awg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cable Management Clip, ACPV, 301 Ss, 90 Degrees, 12 Awg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cap strip</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>casing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cat 5e ehternet cable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cbox board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>clamps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>clip, PV mounting, IFF, shallow (1506-709)</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <formula>TEXT(Case__r.Priority)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Priority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Problem__c</fullName>
        <label>Problem</label>
        <picklist>
            <controllingField>Problem_part__c</controllingField>
            <picklistValues>
                <fullName>Abnormal/Wrong LED indication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abnormal LED indication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AC Disconnect faulty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air pockets in membrane</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Backlight flickers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Backlight not working</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bad Communication Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bent/Warped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blown Fuse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broken/cracked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broken foam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broken Handle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broken structure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brown cells</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burnt Fuse Holder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can&apos;t configure to DL/GW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cannot connect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cannot Receive Info from Datalogger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cannot Reset/Cannot Reboot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chip</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Color variation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Color variation between modules</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comm card faulty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communication Count is &gt; 0 at night or when inverters are not producing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communications Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communication Tab indicates no internet access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connector broken</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connector loose</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connector mismatch</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Problem_part__c</fullName>
        <label>Problem part</label>
        <picklist>
            <controllingField>Location__c</controllingField>
            <picklistValues>
                <fullName>Accessories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AC Disconnect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Backsheet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capacitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cells</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Combiner Box</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conduit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>contacts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Datalogger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC Disconnect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>display</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Door</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error Code</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ESS Switch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>flashing/curbing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frame</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fronius Inverter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Front Panel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gateway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ground Braid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grounding kit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ground Lug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Homeruns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Housing</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <label>Product Category</label>
        <picklist>
            <picklistValues>
                <fullName>BOS electrical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cells</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inverter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Module - SPWR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Module - Tenesol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>monitoring system</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>mounting system</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site-wide</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RMA1__c</fullName>
        <formula>Text( Case__r.RMA1__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RMA?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMA_Quantity__c</fullName>
        <formula>Text(Case__r.RMA_Quantity__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RMA Quantity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMA_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RMA Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <label>Resolution</label>
        <picklist>
            <controllingField>Cause__c</controllingField>
            <picklistValues>
                <fullName>Add anchoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add missing parts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add rivets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add wire whip</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apply Polywater</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR Glass Appearance Different</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR Glass Delamination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-box</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change settings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clean drains</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clean EVA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clean Modules</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>clear critters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>clear faults/powercycle - Cust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>clear faults/powercycle - SPR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clear obstructions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Configure/Correct time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Configure Laptop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>corrosion abatement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decomission Device</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fix Communication Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fix Inverter Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fix Meter Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Install protection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Install Weephole</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jbox Repair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Move Met Station</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pinci</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PowerGarden site, do not move tiles</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Serial__c</fullName>
        <label>Serial#</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serial_s_continued__c</fullName>
        <label>Serial#s continued</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>b_Product_Sub_Category__c</fullName>
        <label>Product Sub-Category</label>
        <picklist>
            <controllingField>Product_Category__c</controllingField>
            <picklistValues>
                <fullName>A300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>accessories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AC Disconnect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACPV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>alzone RM2C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>alzone RM2T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>alzone RM5C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>alzone RM5T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B65</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C65</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Combiner Box</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conduit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC Disconnect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>elettronica santerno</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>fronius</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Homeruns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KACO-EU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NB-245AB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>powerguard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roof</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>satcon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SER-220</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SER-228</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SER-235</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SER-280</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SF mounting system</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Issue</label>
    <nameField>
        <label>Issue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Issues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Other_Text_Value_for_Cause</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISBLANK(Other_Cause__c) ,(CONTAINS(TEXT(Cause__c), &quot;Other&quot;)))</errorConditionFormula>
        <errorDisplayField>Other_Cause__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Other_Text_Value_for_Problem</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISBLANK(Other_Problem__c) ,(CONTAINS(TEXT(Problem__c), &quot;Other&quot;)))</errorConditionFormula>
        <errorDisplayField>Other_Problem__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Other_Text_Value_for_Problem_part</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISBLANK(Other_Problem_part__c) ,(CONTAINS(TEXT(Problem_part__c), &quot;Other&quot;)))</errorConditionFormula>
        <errorDisplayField>Other_Problem_part__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Other_Text_Value_for_Prod_Subcategory</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISBLANK(Other_Product_Sub_Category__c) ,(CONTAINS(TEXT(b_Product_Sub_Category__c), &quot;Other&quot;)))</errorConditionFormula>
        <errorDisplayField>Other_Product_Sub_Category__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Other_Text_Value_for_Resolution</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISBLANK(Other_Resolution__c) ,(CONTAINS(TEXT(Resolution__c), &quot;Other&quot;)))</errorConditionFormula>
        <errorDisplayField>Other_Resolution__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
</CustomObject>